--- a/src/components/Wheel/Wheel.css
+++ b/src/components/Wheel/Wheel.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
+  position: relative;
 }
 
 .wheel {
@@ -53,14 +54,22 @@
 }
 
 button {
-  margin-top: 20px;
-  padding: 10px 20px;
   font-size: 16px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 5px;
+  color: #000;
   cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #ffffff !important;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 75px;
+  aspect-ratio: 1 / 1;
+  z-index: 9999;
+  padding: 0;
 }
 
 button:disabled {
